@@ -28,6 +28,8 @@ import io.stargate.db.schema.ImmutableUserDefinedType;
 import io.stargate.db.schema.UserDefinedType;
 import io.stargate.grpc.Values;
 import io.stargate.proto.QueryOuterClass.Value;
+import java.math.BigDecimal;
+import java.math.BigInteger;
 import java.net.Inet4Address;
 import java.net.Inet6Address;
 import java.net.UnknownHostException;
@@ -35,6 +37,7 @@ import java.nio.ByteBuffer;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.UUID;
 import java.util.stream.Stream;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -48,6 +51,7 @@ public class ValueCodecTest {
     "bigintValues",
     "booleanValues",
     "byteValues",
+    "byteBufferValues",
     "dateValues",
     "doubleValues",
     "floatValues",
@@ -62,6 +66,8 @@ public class ValueCodecTest {
     "setValues",
     "mapValues",
     "tupleValues",
+    "bigIntegerValues",
+    "bigDecimalValues",
   })
   public void validValues(ColumnType type, Value expectedValue) {
     ValueCodec codec = ValueCodecs.get(type.rawType());
@@ -86,6 +92,7 @@ public class ValueCodecTest {
     "invalidBigintValues",
     "invalidBooleanValues",
     "invalidByteValues",
+    "invalidByteBufferValues",
     "invalidDateValues",
     "invalidDoubleValues",
     "invalidFloatValues",
@@ -100,7 +107,9 @@ public class ValueCodecTest {
     "invalidSetValues",
     "invalidMapValues",
     "invalidTupleValues",
-    "invalidUdtValues"
+    "invalidUdtValues",
+    "invalidBigIntegerValues",
+    "invalidBigDecimalValues"
   })
   public void invalidValues(ColumnType type, Value value, String expectedMessage) {
     ValueCodec codec = ValueCodecs.get(type.rawType());
@@ -140,7 +149,19 @@ public class ValueCodecTest {
         arguments(Type.Blob, Values.of(new byte[] {})));
   }
 
+  public static Stream<Arguments> byteBufferValues() {
+    return Stream.of(
+        arguments(Type.Blob, Values.of(ByteBuffer.wrap(new byte[] {'a', 'b', 'c'}))),
+        arguments(Type.Blob, Values.of(ByteBuffer.wrap(new byte[] {}))));
+  }
+
   public static Stream<Arguments> invalidByteValues() {
+    return Stream.of(
+        arguments(Type.Blob, Values.NULL, "Expected bytes type"),
+        arguments(Type.Blob, Values.UNSET, "Expected bytes type"));
+  }
+
+  public static Stream<Arguments> invalidByteBufferValues() {
     return Stream.of(
         arguments(Type.Blob, Values.NULL, "Expected bytes type"),
         arguments(Type.Blob, Values.UNSET, "Expected bytes type"));
@@ -337,7 +358,10 @@ public class ValueCodecTest {
         arguments(Type.List.of(Type.Varchar), Values.of()),
         arguments(
             Type.List.of(Type.Varchar), Values.of(Values.of("a"), Values.of("b"), Values.of("c"))),
-        arguments(Type.List.of(Type.Int), Values.of(Values.of(1), Values.of(2), Values.of(3))));
+        arguments(Type.List.of(Type.Int), Values.of(Values.of(1), Values.of(2), Values.of(3))),
+        arguments(
+            Type.List.of(Type.Int),
+            Values.of(Arrays.asList(Values.of(1), Values.of(2), Values.of(3)))));
   }
 
   public static Stream<Arguments> invalidListValues() {
@@ -361,7 +385,17 @@ public class ValueCodecTest {
     return Stream.of(
         arguments(Type.Set.of(Type.Varchar), Values.of()),
         arguments(
-            Type.Set.of(Type.Varchar), Values.of(Values.of("a"), Values.of("b"), Values.of("c"))));
+            Type.Set.of(Type.Varchar), Values.of(Values.of("a"), Values.of("b"), Values.of("c"))),
+        arguments(
+            Type.Set.of(Type.Varchar),
+            Values.of(
+                new HashSet<Value>() {
+                  {
+                    add(Values.of("a"));
+                    add(Values.of("b"));
+                    add(Values.of("c"));
+                  }
+                })));
   }
 
   public static Stream<Arguments> invalidSetValues() {
@@ -386,7 +420,15 @@ public class ValueCodecTest {
             Values.of(
                 Values.of(Uuids.random()), Values.of("a"),
                 Values.of(Uuids.random()), Values.of("b"),
-                Values.of(Uuids.random()), Values.of("c"))));
+                Values.of(Uuids.random()), Values.of("c"))),
+        arguments(
+            Type.Map.of(Type.Uuid, Type.Varchar),
+            Values.of(
+                ImmutableMap.<Value, Value>builder()
+                    .put(Values.of(Uuids.random()), Values.of("a"))
+                    .put(Values.of(Uuids.random()), Values.of("b"))
+                    .put(Values.of(Uuids.random()), Values.of("c"))
+                    .build())));
   }
 
   public static Stream<Arguments> invalidMapValues() {
@@ -560,5 +602,33 @@ public class ValueCodecTest {
         .keyspace("keyspace") // Dummy value
         .columns(Arrays.asList(columns))
         .build();
+  }
+
+  public static Stream<Arguments> bigIntegerValues() {
+    return Stream.of(
+        arguments(Type.Varint, Values.of(BigInteger.ZERO)),
+        arguments(Type.Varint, Values.of(BigInteger.ONE)),
+        arguments(Type.Varint, Values.of(BigInteger.valueOf(Long.MAX_VALUE))),
+        arguments(Type.Varint, Values.of(BigInteger.valueOf(Long.MIN_VALUE))));
+  }
+
+  public static Stream<Arguments> invalidBigIntegerValues() {
+    return Stream.of(
+        arguments(Type.Varint, Values.NULL, "Expected varint type"),
+        arguments(Type.Varint, Values.UNSET, "Expected varint type"));
+  }
+
+  public static Stream<Arguments> bigDecimalValues() {
+    return Stream.of(
+        arguments(Type.Decimal, Values.of(BigDecimal.ZERO)),
+        arguments(Type.Decimal, Values.of(BigDecimal.ONE)),
+        arguments(Type.Decimal, Values.of(BigDecimal.valueOf(Long.MAX_VALUE))),
+        arguments(Type.Decimal, Values.of(BigDecimal.valueOf(Long.MIN_VALUE))));
+  }
+
+  public static Stream<Arguments> invalidBigDecimalValues() {
+    return Stream.of(
+        arguments(Type.Decimal, Values.NULL, "Expected decimal type"),
+        arguments(Type.Decimal, Values.UNSET, "Expected decimal type"));
   }
 }
